fixed page footer and cut off text

--- a/public/css/emu_landing_page_d.css
+++ b/public/css/emu_landing_page_d.css
@@ -16,7 +16,7 @@ body{
     text-align: center;
     color: #f8f8f8;
     background: url("/resources/emu/bannerBG_overlay.jpg") no-repeat center center;
-    background-size: 100% 50%;
+    background-size: cover;
     background-position: top;
 }
 
